# dolphin

./: CMakeLists.txt
.github/workflows/: macos_build.yml
CMake/: CheckAndAddFlag.cmake
Source/Core/: DolphinLib.props
Source/Core/Common/: BitUtils.h  CMakeLists.txt  MemoryUtil.cpp
Source/Core/Core/: CMakeLists.txt
Source/Core/DolphinNoGUI/: PlatformFBDev.cpp  PlatformMacos.mm  PlatformWin32.cpp  PlatformX11.cpp
Source/Core/DolphinQt/: CMakeLists.txt  Host.cpp  Host.h  MainWindow.cpp  RenderWidget.cpp
Source/Core/VideoBackends/Metal/: CMakeLists.txt  MRCHelpers.h  MTLBoundingBox.h  MTLBoundingBox.mm  MTLGfx.h  MTLGfx.mm  MTLMain.mm  MTLObjectCache.h  MTLObjectCache.mm  MTLPerfQuery.h  MTLPerfQuery.mm  MTLPipeline.h  MTLPipeline.mm  MTLRenderer.h  MTLRenderer.mm  MTLShader.h  MTLStateTracker.h  MTLStateTracker.mm  MTLTexture.h  MTLTexture.mm  MTLUtil.h  MTLUtil.mm  MTLVertexFormat.mm  MTLVertexManager.h  MTLVertexManager.mm  VideoBackend.h
Source/Core/VideoCommon/: AbstractGfx.h  AbstractPipeline.h  BPStructs.cpp  CMakeLists.txt  CPUCull.cpp  CPUCull.h  CPUCullImpl.h  CommandProcessor.cpp  DriverDetails.cpp  DriverDetails.h  FPSCounter.cpp  Fifo.cpp  FramebufferShaderGen.cpp  GeometryShaderGen.cpp  LightingShaderGen.cpp  LightingShaderGen.h  OpcodeDecoding.cpp  PixelShaderGen.cpp  PostProcessing.cpp  Present.cpp  Present.h  RenderBase.h  RenderState.cpp  ShaderCache.cpp  ShaderCache.h  ShaderGenCommon.cpp  ShaderGenCommon.h  TextureCacheBase.cpp  TextureConversionShader.cpp  TextureConversionShader.h  TextureConverterShaderGen.cpp  UberShaderCommon.cpp  (+14 more)
(+36 files in other folders)
